 /* $Id: ChangeLog,v 1.1056 2000-08-09 18:58:42 sandervl Exp $ */

 2000-08-09: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: TLS changes (now updates THDB array instead of calling
                Open32)

 2000-08-09: Christoph Bratschi <cbratschi@datacomm.ch>
    - COMCTL32: added language dependent resources

 2000-08-08: Christoph Bratschi <cbratschi@datacomm.ch>
    - COMCTL32: first part of Corel WINE 20000807 changes

 2000-08-06: Sander van Leeuwen <sandervl@xs4all.nl>
    - doc\ReportingBugs.txt:
                Added a little more information
    - tools\install
                Add Logging.txt + symbol files to debug build.

 2000-08-04: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: Temporary workaround for differences in share mode between
                OS/2 & NT (for opening the same file multiple times):
                NT: CreateFile with FILE_SHARE_READ
                    CreateFile with FILE_SHARE_READ | FILE_SHARE_WRITE
                    -> 2nd CreateFile overrides share flags of first one
                    -> CreateFile with GENERIC_WRITE is now allowed
                OS2: DosOpen with OPEN_SHARE_DENYWRITE
                     DosOpen with OPEN_SHARE_DENYNONE
                     -> sharing violation; can't change share flags while
                        handle returned by 1st DosOpen isn't closed
                --> 'Solution': always open files in FILE_SHARE_DENYNONE mode
                (several installation programs depend on this behaviour)

 2000-08-01: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: Create x:\Program Files & x:\Program Files\Common Files
                directories in odininst.exe + extra registry keys:
                [HKEY_LOCAL_MACHINE\Software\Microsoft\Windows\CurrentVersion]
                "ProgramFilesDir"="x:\Program Files"
                "CommonFilesDir"="x:\Program Files\Common Files"
                "SharedDir"="x:\Odin"